[tool.poetry]
name = "concurrency-eval-scripts"
version = "0.1.0"
description = "Scripts related to AWS Lambda concurrency evaluation"
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
